<resources>
    <string name="app_name">XPipTasks</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="add_task">Добавить задачу</string>
    <string name="add_subtask">Добавить подзадачу</string>
    <string name="new_sub_task_text">Текст подзадачи</string>
    <string name="new_main_task_text">Текст задачи</string>

    <string name="save_string">Сохранить</string>
    <string name="add_subTask">+</string>
    <string name="del_MainTask_Q">Удалить задачу?</string>
    <string name="delete_string">Удалить</string>
    <string name="change_string">Изменить</string>
    <string name="cancel">Отмена</string>
    <string name="add_new_task_title">Добавить</string>
    <string name="main_task_dialog_title">Редактировать задачу</string>
    <string name="show_on_map">Показать локацию</string>

    <string name="CREATE_Task">CREATE TABLE [Task] (
  [id] INTEGER PRIMARY KEY AUTOINCREMENT,
  [Text] TEXT NOT NULL ON CONFLICT ABORT,
  [State] INTEGER NOT NULL ON CONFLICT REPLACE DEFAULT (3),
  [Selected] INTEGER NOT NULL ON CONFLICT REPLACE DEFAULT (0));
  </string>
    <string name="DROP_Task">DROP TABLE IF EXISTS [Task]</string>
	<string name="CREATE_SubTask">CREATE TABLE [Subtask] (
  [id] INTEGER PRIMARY KEY AUTOINCREMENT,
  [Task_id] INTEGER NOT NULL ON CONFLICT ABORT CONSTRAINT [subtask_to_task] REFERENCES [Task]([id]) ON DELETE CASCADE ON UPDATE CASCADE,
  [Text] TEXT,
  [State] INTEGER NOT NULL ON CONFLICT REPLACE DEFAULT (3));
	</string>
    <string name="DROP_SubTask">DROP TABLE IF EXISTS [Subtask]</string>
	<string name="SELECT_Tasks">select [id], [text], [ready]
from [Task]
order by ready, id
	</string>
    <string name="SELECT_SubTasks">select [id], [text], [ready]
from [Task]
order by ready, id
	</string>
    <string name="defaultMainTaskText">Новая задача</string>
    <string name="edit_Q">Редактирование</string>
    <string name="TaskDone">Выполненна</string>
    <string name="SubTaskDone">Выполненна</string>
    <string name="TaskNotDone">Активна</string>
    <string name="sub_task_dialog_title">Редактирование подзадачи</string>
</resources>
