<?xml version="1.0" encoding="utf-8"?>



<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="fill_parent">
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/MainTaskEditText"
            android:layout_gravity="top"
            android:layout_span="3"
            android:hint="@string/new_main_task_text"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="left">>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/MainTaskDialog_cancel"
            android:layout_column="0"
            android:layout_row="1" />

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <Button

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_string"
                android:id="@+id/MainTaskDialog_SaveButton"
                android:layout_gravity="right"
                android:layout_marginRight="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_string"
                android:id="@+id/MainTaskDialog_delete"
                android:layout_gravity="left|center_vertical" />

        </FrameLayout>
    </TableRow>

</LinearLayout>
