<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/tableRow">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="0.4">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_task"
                    android:textSize="10dp"
                    android:id="@+id/addMainTaskButton"
                    android:onClick="newMainTask_click"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.5" />

                <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="New ToggleButton"
                    android:id="@+id/editModeToggle"
                    android:checked="false"
                    android:textSize="10dp"
                    android:textOn="Редактировать"
                    android:textOff="Редактировать"
                    android:layout_weight="0.5" />

            </TableRow>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mainTasksListView"
                android:footerDividersEnabled="false"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.3">

            <TableRow

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right">

                <Button
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@string/add_subtask"
                    android:id="@+id/NewSubTaskButton"
                    android:layout_weight="0.5"
                    android:onClick="newSubTask_click" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_on_map"
                    android:layout_gravity="left"
                    android:id="@+id/showonmapButton"
                    android:textSize="12sp"
                    android:layout_weight="0.5" />

            </TableRow>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/SubTasksListView" />
        </LinearLayout>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/tableRow">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Задачи"
            android:id="@+id/radioButton"
            android:checked="true"
            android:layout_gravity="center_vertical" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Карта мира"
            android:id="@+id/radioButton2"
            android:checked="false"
            android:layout_gravity="center_vertical" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Заметки"
            android:id="@+id/radioButton3"
            android:checked="false"
            android:layout_gravity="center_vertical" />
    </TableRow>
</RelativeLayout>
